# hubble-ai-trading

./: README.md
fe/app/components/ui/: empty-state.tsx  markdown.tsx
fe/app/features/client.order/: index.ts
fe/app/features/client.order/components/: OrderCard.tsx  OrderList.tsx
fe/app/features/client.order/hooks/: use-orders.ts
fe/app/features/client.portfolio/: index.tsx
fe/app/features/client.portfolio/components/: PortfolioCard.tsx  PortfolioList.tsx
fe/app/features/client.portfolio/hooks/: use-trader-portfolios.ts
fe/app/features/order/: index.ts
fe/app/features/order/api/: handlers.ts
fe/app/features/order/database/: schema.ts  types.ts
fe/app/features/positions/: index.ts
fe/app/features/positions/api/: handlers.ts
fe/app/hooks/: useMobile.ts
fe/app/libs/: react-query-config.ts
fe/app/middleware/: admin-auth.ts  common.ts
fe/app/routes/: aster.tsx  empty-chat.tsx
fe/app/svg/: deepseek.tsx  empty-chart.tsx  empty-order.tsx  empty-portfolio.tsx  googlegemini.tsx  logo.tsx  openai.tsx
trading/: .cursorignore  .cursorrules  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
trading/tradingagents/: config.py  trading_runner.py
trading/tradingagents/agents/: __init__.py  prompt_utils.py
trading/tradingagents/agents/portfolio_manager/: __init__.py  futures_portfolio_manager.py
trading/tradingagents/agents/risk_manager/: __init__.py  futures_risk_manager.py
trading/tradingagents/agents/utils/: agent_states.py  futures_execution_tools.py  futures_models.py
trading/tradingagents/dataflows/: asterdex_futures_api.py
(+12 files in other folders)
